# water_simulation

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  make.sh
apps/: CMakeLists.txt
apps/sim_cli/: main.cpp
core/: CMakeLists.txt
core/include/water/core/: boundary.h  cell_grid.h  cuda_check.h  device_buffer.h  particle_store.h  spatial_accel.h  sph_kernels.cuh  timestep.h  types.h
core/src/: boundary.cu  cell_grid.cu  particle_store.cu  spatial_accel.cu  timestep.cpp
docs/superpowers/plans/: 2026-04-23-water-simulation-v2-phase1-foundation.md  2026-04-24-water-simulation-v2-phase2-dfsph-solver.md  2026-04-24-water-simulation-v2-phase2.5-boundaries-and-viscosity.md
docs/superpowers/specs/: 2026-04-23-water-simulation-rebuild-design.md
include/: BaseSolver.h  BasicSPHSolver.h  CUDAFunctions.cuh  Camera.h  DArray.h  DFSPHSolver.h  MarchingCubes.cuh  MarchingCubes.h  PBDSolver.h  Particles.h  Render.h  SPHParticles.h  SPHSystem.h  ShaderUtility.h  ShaderUtils.h  global.h
legacy/: CMakeLists.txt  CMakeLists.txt.windows_sample  README.md
legacy/include/: BasicSPHSolver.h  CUDAFunctions.cuh  Camera.h  CudaMemory.h  DArray.h  MarchingCubesLUT.h  Particles.h  SPHParticles.h  SPHSystem.h  global.h
legacy/shaders/: particles.vert
legacy/src/: Camera.cpp  Render.cpp  SPHSystem.cu  ShaderUtils.cpp  main.cpp  vbo.cu
renderer/: CMakeLists.txt
renderer/include/water/renderer/: vk_device.h
renderer/shaders/: hello.slang
renderer/src/: vk_device.cpp
scene/: CMakeLists.txt
scene/include/water/scene/: scene.h
scene/src/: loader.cpp
scenes/: dam_break.json  dam_break_hires.json  falling_block.json  single_drop.json
shaders/: container.frag  container.vert  particles.frag  particles.vert  skybox.frag  skybox.vert  surface.frag  surface.vert
solvers/: CMakeLists.txt
solvers/dfsph/: CMakeLists.txt
solvers/dfsph/include/water/solvers/: boundary_sampler.h  dfsph.h
solvers/dfsph/src/: boundary_sampler.cpp  dfsph.cu  dfsph_kernels.cu
src/: BasicSPHSolver.cu  CUDAFunctions.cuh  Camera.cpp  DFSPHSolver.cu  MarchingCubes.cu  PBDSolver.cu  Particles.cu  Render.cpp  SPHSystem.cu  ShaderUtility.cpp  ShaderUtils.cpp  main.cpp  vbo.cu
tests/: CMakeLists.txt
tests/regression/: CMakeLists.txt  test_settled_puddle.cu
tests/unit/: test_boundary.cu  test_boundary_sampler.cu  test_cell_grid.cu  test_dfsph_density.cu  test_particle_store.cu  test_scene_loader.cpp  test_spatial_accel.cu  test_sph_kernels.cu
tools/: blender_render.py  particles_to_mesh.py  preview_frame.py  viz.py
